--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.11",
     "git-commit-msg-linter": "^4.4.0",
-    "typescript": "^4.9.3"
+    "typescript": "*"
   }
 }
