chore: adds husky and lint-staged

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint 'src/**'",
+    "lint:fix": "eslint 'src/**' --fix",
+    "lint:staged": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +22,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
     "git-commit-msg-linter": "^4.4.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
     "typescript": "*"
   }
 }
