--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
@@ -23,7 +24,9 @@
     "eslint-plugin-react": "^7.31.11",
     "git-commit-msg-linter": "^4.4.0",
     "husky": "^8.0.2",
+    "jest": "^29.3.1",
     "lint-staged": "^13.0.4",
+    "ts-jest": "^29.0.3",
     "typescript": "*"
   }
 }
