--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,27 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   },
-  "extends": ["plugin:react/recommended", "standard-with-typescript"],
-  "overrides": [],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
+  "extends": [
+    "standard-with-typescript",
+    "plugin:react/recommended"
+  ],
   "plugins": ["react"],
+  "parserOptions": {
+    "project": "./tsconfig-eslint.json"
+  },
   "rules": {
-    "@typescript-eslint/consistent-type-definitions": "off"
+    "@typescript-eslint/consistent-type-definitions": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/comma-spacing": "off",
+    "@typescript-eslint/return-await": "off",
+    "@typescript-eslint/no-namespace": "off",
+    "no-redeclare": "off",
+    "import/export": "off",
+    "react/jsx-uses-react": "error",
+    "react/jsx-uses-vars": "error"
   }
 }
